--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"express": "^4.16.4",
 		"express-validator": "^5.3.1",
 		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"mongoose": "^5.7.5"
 	},
 	"devDependencies": {
